ingress/gateway_class.yaml
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: home-lab
  namespace: home-lab
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
