ingress/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: min-io
  namespace: min-io
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: home-lab
  to:
  - group: ""
    kind: Service
