ingress/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: home-lab
  namespace: home-lab
spec:
  gatewayClassName: home-lab
  listeners:
    - name: http
      protocol: HTTP
      port: 80
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          group: ""
          name: home-lab-ingress
    - name: passthrough
      protocol: TLS
      tls:
        mode: Passthrough
      port: 443
