ingress/gateway_test.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: home-lab-test
  namespace: cert-manager
  annotations:
    cert-manager.io/cluster-issuer: lcl-lab-issuer
spec:
  gatewayClassName: home-lab
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: '*.lcl-lab.com'
    - name: https
      protocol: HTTPS
      port: 443
      hostname: '*.lcl-lab.com'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: home-lab-gateway-https
