ingress/argo-ingress.yaml
# edit the argocd-cmd-params-cm and add the "server.insecure: "true" flag b/c tls terminates at the gateway
# otherwise we get "Too many redirects" error

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: ingress
spec:
  parentRefs:
    - name: home-lab-ingress
  hostnames:
    - "argo.lcl-lab.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: argocd-server
          namespace: argocd
          port: 443
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: argocd-server
  namespace: argocd
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: ingress
  to:
  - group: ""
    kind: Service
