ingress/graphana-ingress.yaml
# edit the argocd-cmd-params-cm and add the "server.insecure: "true" flag b/c tls terminates at the gateway
# otherwise we get "Too many redirects" error

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: ingress
spec:
  parentRefs:
    - name: home-lab-ingress
  hostnames:
    - "obs.lcl-lab.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: prometheus-stack-grafana
          namespace: prometheus
          port: 80
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: prometheus-stack-grafana
  namespace: prometheus
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: ingress
  to:
  - group: ""
    kind: Service
