ingress/http-router.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: min-io
  namespace: home-lab
spec:
  parentRefs:
    - name: home-lab
  hostnames:
    - "storage.home.lab"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: min-io
          namespace: min-io
          port: 9001
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
