ingress/minio-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: minio-ingress
  namespace: ingress
spec:
  parentRefs:
    - name: home-lab-ingress
  hostnames:
    - "storage.lcl-lab.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: min-io
          namespace: min-io
          port: 9001
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: min-io
  namespace: min-io
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: ingress
  to:
  - group: ""
    kind: Service
